// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput must match the snapshot with default Props 1`] = `
<FakeInputGreyStyle>
  <IconLabelStyle
    aria-label="qux"
    htmlFor="bar"
  >
    <svg
      icon="lock"
      lib="@fortawesome/react-fontawesome"
      prefix="fas"
    />
  </IconLabelStyle>
  <BasicInputStyle
    aria-required={false}
    id="bar"
    name="bar"
    onChange={[Function]}
    placeholder="qux"
    required={false}
    tabIndex={0}
    type="foo"
    value="baz"
  />
  <PasswordButton
    passwordIsDisplayed={false}
    tabIndex={0}
    togglePasswordIsDisplayed={[Function]}
  />
</FakeInputGreyStyle>
`;

exports[`PasswordInput must return the diff between snapshot when password is displayed vs hidden 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -15,14 +15,14 @@
      name="bar"
      onChange={[Function handleChange]}
      placeholder="qux"
      required={false}
      tabIndex={0}
-     type="text"
+     type="foo"
      value="baz"
    />
    <PasswordButton
-     passwordIsDisplayed={true}
+     passwordIsDisplayed={false}
      tabIndex={0}
      togglePasswordIsDisplayed={[Function togglePasswordIsDisplayed]}
    />
  </FakeInputGreyStyle>
`;

exports[`PasswordInput must return the diff between snapshot when password is required or optionnal 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -8,16 +8,16 @@
        lib="@fortawesome/react-fontawesome"
        prefix="fas"
      />
    </IconLabelStyle>
    <BasicInputStyle
-     aria-required={true}
+     aria-required={false}
      id="bar"
      name="bar"
      onChange={[Function handleChange]}
      placeholder="qux"
-     required={true}
+     required={false}
      tabIndex={0}
      type="foo"
      value="baz"
    />
    <PasswordButton
`;

exports[`PasswordInput must return the diff between snapshot with a negative vs a postive Tab Index 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -14,15 +14,15 @@
      id="bar"
      name="bar"
      onChange={[Function handleChange]}
      placeholder="qux"
      required={false}
-     tabIndex="-1"
+     tabIndex="0"
      type="foo"
      value="baz"
    />
    <PasswordButton
      passwordIsDisplayed={false}
-     tabIndex="-1"
+     tabIndex="0"
      togglePasswordIsDisplayed={[Function togglePasswordIsDisplayed]}
    />
  </FakeInputGreyStyle>
`;
